@@ -144,7 +144,7 @@ public:
 
         cmat result(D, D);
 #pragma omp parallel for collapse(2)
-        for (idx j = 0; j < D; ++j)
+        for (idx j = 0; j < D; ++j) // column major order for speed
             for (idx i = 0; i < D; ++i)
                 result(i, j) = 1 / std::sqrt(static_cast<double>(D))
                         * std::pow(omega(D), i * j);
