@@ -260,7 +260,7 @@ dyn_mat<typename Derived1::Scalar> _kron2(const Eigen::MatrixBase<Derived1>& A,
     result.resize(Arows * Brows, Acols * Bcols);
 
 #pragma omp parallel for collapse(2)
-    for (idx j = 0; j < Acols; ++j)
+    for (idx j = 0; j < Acols; ++j) // column major order for speed
         for (idx i = 0; i < Arows; ++i)
             result.block(i * Brows, j * Bcols, Brows, Bcols) = rA(i, j) * rB;
 
